# cottid

./: AGENTS.md  CONTEXT.md  Cargo.toml  IMPLEMENTATION_PLAN.md
docs/: DOMAIN_MODEL.md  IMPLEMENTATION_PLAN.md  RPC_CLIENT_PLAN.md  SETTINGS_MIGRATION.md  UI_STRUCTURE.md  manual-qa.md
docs/adr/: 0001-keyring-backed-config-storage.md  0002-http-polling-source-of-truth.md  0003-light-premium-shell-and-local-svg-icons.md  0004-system-adaptive-premium-shell.md  0005-rust-design-tokens-and-component-wrappers.md  0006-astryx-inspired-iced-theme-tokens.md  0007-iced-native-tooltip-popover-overlays.md  0008-modeled-runtime-global-options.md  0009-websocket-primary-refresh-and-actions.md  0010-managed-local-aria2-daemon.md
docs/agents/: architecture.md  aria2-modeling.md  dependencies.md  domain.md  engineering-tests.md  errors-config.md  iced-mvu.md  mvp-scope.md
src/: main.rs
src/app/: message.rs  mod.rs  scheduler.rs  state.rs  subscriptions.rs  update.rs
src/aria2/: client.rs  domain.rs  errors.rs  methods.rs  mod.rs  notifications.rs  raw_types.rs  websocket.rs
src/config/: mod.rs
src/daemon/: config.rs  error.rs  health.rs  manager.rs  mod.rs  paths.rs  process.rs
src/ui/: color.rs  components.rs  downloads.rs  icons.rs  mod.rs  shell.rs  theme.rs  tokens.rs  variants.rs
src/ui/overlay/: mod.rs  placement.rs  popover.rs  positioning.rs  style.rs  tooltip.rs
src/ui/widgets/: badge.rs  button.rs  container.rs  field.rs  input.rs  mod.rs  scrollable.rs
src/ui/widgets/tree_list/: mod.rs  style.rs  types.rs
src/util/: format.rs
