[package]
name = "cottid"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3.32", features = ["sink"] }
iced = { version = "0.14.0", features = ["advanced", "svg", "tokio"] }
keyring = "4.1.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["time"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
toml = "1.1.2"

[features]
debug = ["iced/hot"]
